TINY-8463: Toolbar spacing fixes after design review

--- a/modules/oxide/src/less/theme/components/toolbar-button/toolbar-button.less
+++ b/modules/oxide/src/less/theme/components/toolbar-button/toolbar-button.less
@@ -22,7 +22,7 @@
 @toolbar-button-height: 28px;
 @toolbar-button-icon-color: contrast(@background-color, @color-white, @color-black);
 @toolbar-button-spacing-x: 1px;
-@toolbar-button-spacing-y: 3px;
+@toolbar-button-spacing-y: 5px;
 @toolbar-button-text-color: contrast(@background-color, @color-white, @color-black);
 @toolbar-button-text-transform: none;
 @toolbar-button-width: 34px;
