--- a/modules/oxide/src/less/theme/components/toolbar/toolbar.less
+++ b/modules/oxide/src/less/theme/components/toolbar/toolbar.less
@@ -10,7 +10,7 @@
 //
 
 @toolbar-background-color: @background-color;
-@toolbar-padding-y: 5px;
+@toolbar-padding-y: 1px;
 @toolbar-padding-x: @pad-sm;
 @toolbar-row-separator-color: @tinymce-separator-color;
 @toolbar-row-separator-padding: @toolbar-group-padding-x;
